[package]
name = "ghtest"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["serde"] }
[dev-dependencies]
blake2 = { version = "0.10.6", features = ["std", "size_opt"] }
blake2s_simd = { version = "1.0.2", features = ["std"] }
blake3 = { version = "1.5.5", features = ["digest", "std"] }
criterion = "0"

hmac = { version = "0.12.1", features = ["std"] }
md5 = { version = "0.7.0", features = ["std"] }
sha2 = { version = "0.10.8", features = ["compress", "std"] }
sha3 = { version = "0.10.8", features = ["asm", "std"] }
sm3 = { version = "0.4.2", features = ["std"] }
whirlpool = { version = "0.10.4", features = ["std"] }

[[bench]]
name = "hash"
harness = false
