[package]
name = "ghtest"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = { version = "0.8.5", features = ["serde"] }
[dev-dependencies]
criterion = "0"

aes-gcm = { version = "0.10.3", features = ["std"] }
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
salsa20 = { version = "0.10.2", features = ["std"] }
blowfish = "0.9.1"
sm4 = "0.5.1"
camellia = "0.1.0"
twofish = "0.7.1"

[[bench]]
name = "symmetric_encrypt"
harness = false
